--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever Github Repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime exercitationem reiciendis eveniet saepe aliquam sunt dignissimos voluptates incidunt architecto tempore reprehenderit illum dolor possimus alias, repellat neque vitae quaerat dolorem!</p>
+    </div>
 </body>
 </html>
