--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My First Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime exercitationem reiciendis eveniet saepe aliquam sunt dignissimos voluptates incidunt architecto tempore reprehenderit illum dolor possimus alias, repellat neque vitae quaerat dolorem!</p>
     </div>
+    <div>
+        <h3>My Second Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime exercitationem reiciendis eveniet saepe aliquam sunt dignissimos voluptates incidunt architecto tempore reprehenderit illum dolor possimus alias, repellat neque vitae quaerat dolorem!</p>
+    </div>
+    <div>
+        <h3>My Third Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime exercitationem reiciendis eveniet saepe aliquam sunt dignissimos voluptates incidunt architecto tempore reprehenderit illum dolor possimus alias, repellat neque vitae quaerat dolorem!</p>
+    </div>
 </body>
 </html>
