--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>My Third Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime exercitationem reiciendis eveniet saepe aliquam sunt dignissimos voluptates incidunt architecto tempore reprehenderit illum dolor possimus alias, repellat neque vitae quaerat dolorem!</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
