added kim with a dim

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>kim kim khai everyday one single dim</h3>
+        <img src="images/20901699_1539905039402145_2287222784724652304_o.jpg" alt="">
+    </div>
 </body>
 </html>
